--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -17,6 +17,186 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="50" data-price="36.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30adXjm"><img src="https://m.media-amazon.com/images/I/61n7Ho0i9rL._SR400,400_.jpg" alt="True Wireless Earbuds Bluetooth" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30adXjm">True Wireless Earbuds Bluetooth 5.0 DULLA Sweatproof TWS Deep Bass Earphones Noise Cancelling Isolating Headsets</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $36.99</strong> using code:50CUEROT</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/30adXjm">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="64.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HcIkOH"><img src="https://m.media-amazon.com/images/I/614RGpUSKOL._SR400,400_.jpg" alt="Wooden Clock Radio" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>80% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HcIkOH">InstaBox i10 Wooden Clock Radio with Handle, Portable Retro Bluetooth Speaker, Digital FM Radio Multi-Functional MP3 Player</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>80% off at $64.99</strong> using code:802YGJ6P</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2HcIkOH">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="26.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HdqJGd"><img src="https://m.media-amazon.com/images/I/51zUi40dZKL._SR400,400_.jpg" alt="Yoobao Portable Charger 10000mAh Slim Power Bank Powerbank" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HdqJGd">Yoobao Portable Charger 10000mAh Slim Power Bank Powerbank External Cell Phone Battery Backup Charger Battery Pack</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $26.99</strong> using code:30CQ1TRB</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2HdqJGd">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LCusBi"><img src="https://m.media-amazon.com/images/I/61NIsp+tu+L._SR400,400_.jpg" alt="Sunvito Foldable Kids Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LCusBi">Sunvito Foldable Kids Headphones, Cat Ear Headset with LED Lights, Kids Headphones Over Ear</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $16.99</strong> using code:30V6T7TD</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LCusBi">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="15.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Vuzi8q"><img src="https://m.media-amazon.com/images/I/51IdCVhFEHL._SR400,400_.jpg" alt="SIQIWO Bluetooth Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Vuzi8q">SIQIWO Bluetooth Headphones, Wireless Sports Earphone IPX6 Waterproof, with Mic Hi-Fi Stereo in-Ear Neckband Earbuds Gym Running 8-10 Hours of Playback</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $15.99</strong> using code:15CDXN3H</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Vuzi8q">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="24.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DVyxdJ"><img src="https://m.media-amazon.com/images/I/51OC7bFLKiL._SR400,400_.jpg" alt="Projection Alarm Clock Radio" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2DVyxdJ">Projection Alarm Clock Radio - Koviti FM Radio Alarm Clock with Dimmer, Ultra Clear LED Digital Alarm Clock to Ceiling Wall</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $24.99</strong> using code:promo_code</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DVyxdJ">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="26.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2E2aEkH"><img src="https://m.media-amazon.com/images/I/813r26YxQtL._SR400,400_.jpg" alt="Laptop Backpack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2E2aEkH">Laptop Backpack, Business Anti Theft Waterproof Travel Backpack with USB Charging Port for College School Computer Bag</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $26.99</strong> using code:50XRUZ7H</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2E2aEkH">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="10.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HcGqxd"><img src="https://m.media-amazon.com/images/I/71bVJ3n807L._SR400,400_.jpg" alt="NEWYES 8.5 Inch Doodle Pad LCD Writing Tablet" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HcGqxd">NEWYES 8.5 Inch Doodle Pad LCD Writing Tablet Kitchen Fridge Memo Board Toys for Kids(Blue)</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $10.99</strong> using code:4035DKB8</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2HcGqxd">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HgEWCt"><img src="https://m.media-amazon.com/images/I/81U-MqJfDUL._SR400,400_.jpg" alt="BISON DENIM Mens Computer Backpack Water Resistant School Daypack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HgEWCt">BISON DENIM Mens Computer Backpack Water Resistant School Daypack 15.6in Laptop Backpack with USB Charging Port</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>70% off at $39.99</strong> using code:70HJQDOB</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2HgEWCt">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="31" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JCu6s1"><img src="https://m.media-amazon.com/images/I/71cciPrzisL._SR400,400_.jpg" alt="BrexLink USB Certified Type C Cable" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>31% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JCu6s1">BrexLink USB Certified Type C Cable, USB C to USB A Charger (6.6ft, 2 Pack), Nylon Braided Fast Charging Cord for Samsung Galaxy S9 S8 Note 8, Pixel, LG V30 G6 G5</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>31% off at $9.99</strong> using code:31AQBREX</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JCu6s1">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="30" data-price="12.69">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/3097epM"><img src="https://m.media-amazon.com/images/I/61igpBmXT4L._SR400,400_.jpg" alt="USB C Hub, SOAI Type C Hub" /></a>
@@ -68,24 +248,6 @@
   </div> 
   <div class="deal_btn">
     <a target="_blank" href="https://amzn.to/2VoHSFw">Use Code</a>
-  </div>
-</div>
-
-<div class="card clearfix" data-score="70" data-price="17.99">
-  <div class="image_box">
-    <a target="_blank" href="https://amzn.to/2VdEQ1O"><img src="https://m.media-amazon.com/images/I/41DfxJhYBeL._SR400,400_.jpg" alt="Magnetic Car Mount Holder" /></a>
-  </div>
-  <div class="inner">
-    <span class="regular"><em>70% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2VdEQ1O">Magnetic Car Mount Holder with Super Strong Magnet, Cell Phone Holder for Car, Dashboard Mount for...</a></p>
-    <div class="code_high">
-      <p><span>Take <strong>70% off at $17.99</strong> using code:promo_code</span></p>
-      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
-    </div>
-  </div> 
-  <div class="deal_btn">
-    <a target="_blank" href="https://amzn.to/2VdEQ1O">Use Code</a>
   </div>
 </div>
 
