--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -17,6 +17,187 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="36" data-price="21.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30bRMt5"><img src="https://m.media-amazon.com/images/I/71QdzNp9drL._SR400,400_.jpg" alt="SEEHONOR Laptop Backpack" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>36% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30bRMt5">SEEHONOR Laptop Backpack, Slim Business Computer Backpack with USB Charging Cable and Port, Water Resistant Anti-Theft Travel School Bags</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>36% off at $21.99</strong> using code:36GLW3OJ</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/30bRMt5">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JCynLI"><img src="https://m.media-amazon.com/images/I/51olsziXwUL._SR400,400_.jpg" alt="Hemp Oil for Pain, Stress & Anxiety Relief 2500MG" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JCynLI">Hemp Oil for Pain, Stress & Anxiety Relief 2500MG - Better Sleep & Mood 30ML</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $29.99</strong> using code:50QI8IEX</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JCynLI">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="73" data-price="47.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VqZhxo"><img src="https://m.media-amazon.com/images/I/51oOdM1lWRL._SR400,400_.jpg" alt="Aromatherapy Essential Oil Diffuser" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>73% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VqZhxo">100ml Aromatherapy Essential Oil Diffuser, HomySnug(TM) Textured Ultrasonic Cool Mist Humidifier, AUTO Shut Off</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>73% off at $47.99</strong> using code:73SXVS15</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VqZhxo">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="39.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DYZeOM"><img src="https://m.media-amazon.com/images/I/71nsn5quy1L._SR400,400_.jpg" alt="Comfier Shiatsu Neck and Shoulder Massager" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2DYZeOM">Comfier Shiatsu Neck and Shoulder Massager- Deep Kneading Massage Pillow with Heat, Back Massager</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>10% off at $39.98</strong> using code:10MBP773</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DYZeOM">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="69.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VzlmtW"><img src="https://m.media-amazon.com/images/I/61xfrAomVdL._SR400,400_.jpg" alt="Housmile Electric Car Refrigerator" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VzlmtW">Housmile Electric Car Refrigerator, Portable Mini Fridge with Cold and Hot Functionality - 7L</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $69.99</strong> using code:40PR3A9V</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VzlmtW">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VqZC38"><img src="https://m.media-amazon.com/images/I/711I4tnim9L._SR400,400_.jpg" alt="Vacuum Sealer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VqZC38">Vacuum Sealer, Aicok Food Sealer Machine for Food Savers and Sous Vide/Starter Kit|Pulse Function|Led Indicator Lights|Easy to Clean|Compact Design</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $39.99</strong> using code:509H9VNR</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VqZC38">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="18.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Heb3m3"><img src="https://m.media-amazon.com/images/I/61z6rL8PUqL._SR400,400_.jpg" alt="Cool-Shop Vegetable Chopper Slicer Dicer Cutter" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Heb3m3">Cool-Shop Vegetable Chopper Slicer Dicer Cutter - Onion Chopper - Effortless No-Mess Salad Vegetable Cutter, 3 Interchangeable Blades Set</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $18.99</strong> using code:50HZ6KPG</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Heb3m3">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="15.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HcHfpK"><img src="https://m.media-amazon.com/images/I/81tctbVsCPL._SR400,400_.jpg" alt="Chopstick Reusable Chinese Style" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HcHfpK">Chopstick Reusable Chinese Style Dragon and Phoenix Chopsticks with Holder and Carrying Bag Chinese Gift Set Chopsticks set</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $15.99</strong> using code:50UGF8F4</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2HcHfpK">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="59.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2vZnlbL"><img src="https://m.media-amazon.com/images/I/41qQVQzDj0L._SR400,400_.jpg" alt="MICHELANGELO Ceramic Nonstick Pan 12 Inch" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2vZnlbL">MICHELANGELO Ceramic Nonstick Pan 12 Inch, 12 Inch Ceramic Frying Pan Nonstick, Nonstick Skillet with Lid, Ultra Nonstick Frying Pans</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $59.99</strong> using code:50IORD35</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2vZnlbL">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="19.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/307cB8Q"><img src="https://m.media-amazon.com/images/I/613EPA5xyYL._SR400,400_.jpg" alt="Meat Thermometer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/307cB8Q">Meat Thermometer, WeGuard Instant Read Thermometer cooking thermometer with backlight magnet Auto On/Off digital probe food thermometer </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $19.98</strong> using code:50O7MYM8</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/307cB8Q">Use Code</a>
+  </div>
+</div>
+
+
 <div class="card clearfix" data-score="50" data-price="36.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/30adXjm"><img src="https://m.media-amazon.com/images/I/61n7Ho0i9rL._SR400,400_.jpg" alt="True Wireless Earbuds Bluetooth" /></a>
